Add DataView web app

--- a/Sydra/Wydra/res/apps/monitor.html
+++ b/Sydra/Wydra/res/apps/monitor.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+    <meta charset="utf-8">
     <title>Monitor</title>
     <script type="text/javascript" src="../lib/scripts/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="../lib/scripts/jquery.tablesorter.min.js"></script>
@@ -11,7 +12,7 @@
     <link rel="stylesheet" href="monitor.css" type="text/css"/>
 </head>
 <body>
-<p id="debug-trigger" class="debug-trigger">Trigger</p>
+<!--<p id="debug-trigger" class="debug-trigger">Trigger</p>-->
 <p class="select-note">更新频率</p>
 <select id="refresh-frequency">
     <option value="1">非常频繁 (1 s)</option>
