Decoupling SortedTable and TreeTable

--- a/Sydra/Wydra/res/apps/dataviewer.html
+++ b/Sydra/Wydra/res/apps/dataviewer.html
@@ -6,9 +6,10 @@
     <script type="text/javascript" src="../lib/scripts/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="../lib/scripts/jquery.tablesorter.min.js"></script>
     <script type="text/javascript" src="../lib/scripts/msgpack.min.js"></script>
-    <!--<script type="text/javascript" src="../lib/scripts/showdown.min.js"></script>-->
-    <!--<script type="text/javascript" src="../lib/scripts/numeral.min.js"></script>-->
     <script src="../lib/scripts/jquery.treetable.js"></script>
+    <script type="text/javascript" src="../sup/Hydra.js"></script>
+    <script type="text/javascript" src="../sup/Util.js"></script>
+    <script type="text/javascript" src="../sup/TreeTable.js"></script>
     <script type="text/javascript" src="dataviewer.js"></script>
     <link rel="stylesheet" href="dataviewer.css" type="text/css"/>
     <link href="../lib/styles/treetable/jquery.treetable.css" rel="stylesheet" type="text/css"/>
@@ -26,11 +27,10 @@
     </tr>
     </thead>
     <tbody>
-    <tr id="TEMP_u2u484u8248923748912ujoawef" data-tt-id="1">
+    <tr id="root" data-tt-id="root" style="display: none">
+        <td>Loading...</td>
         <td></td>
         <td></td>
-        <td></td>
-        <!--<td></td>-->
         <td></td>
     </tr>
     <!--<tr id="TEMP_u2u484u8248923748912ujoa3wef" data-tt-id="3" data-tt-parent-id="1">-->
@@ -58,22 +58,22 @@
     </tbody>
 </table>
 
-<table id="hip-table" border="1" class="tablesorter">
-    <thead>
-    <tr>
-        <th class="header">Entry</th>
-        <th class="header">Type</th>
-        <th class="header">LastModified</th>
-        <th class="header">Size</th>
-    </tr>
-    </thead>
-    <tr id="TEMP_u2u4u8248923748912ujoawef">
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>
-</table>
+<!--<table id="hip-table" border="1" class="tablesorter">-->
+<!--<thead>-->
+<!--<tr>-->
+<!--<th class="header">Entry</th>-->
+<!--<th class="header">Type</th>-->
+<!--<th class="header">LastModified</th>-->
+<!--<th class="header">Size</th>-->
+<!--</tr>-->
+<!--</thead>-->
+<!--<tr id="TEMP_u2u4u8248923748912ujoawef">-->
+<!--<td></td>-->
+<!--<td></td>-->
+<!--<td></td>-->
+<!--<td></td>-->
+<!--</tr>-->
+<!--</table>-->
 
 <div id="HipEntryNote">
 
