--- a/Sydra/Wydra/res/apps/monitor.html
+++ b/Sydra/Wydra/res/apps/monitor.html
@@ -7,6 +7,9 @@
     <script type="text/javascript" src="../lib/scripts/jquery.tablesorter.min.js"></script>
     <script type="text/javascript" src="../lib/scripts/msgpack.min.js"></script>
     <script type="text/javascript" src="../lib/scripts/showdown.min.js"></script>
+    <script type="text/javascript" src="../sup/Hydra.js"></script>
+    <script type="text/javascript" src="../sup/Util.js"></script>
+    <script type="text/javascript" src="../sup/SortedTable.js"></script>
     <script type="text/javascript" src="monitor.js"></script>
     <link rel="stylesheet" href="../lib/styles/tablesorter/blue/style.css" type="text/css"/>
     <link rel="stylesheet" href="monitor.css" type="text/css"/>
