--- a/Sydra/Wydra/res/apps/dataviewer.html
+++ b/Sydra/Wydra/res/apps/dataviewer.html
@@ -6,6 +6,7 @@
     <script type="text/javascript" src="../lib/scripts/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="../lib/scripts/jquery.tablesorter.min.js"></script>
     <script type="text/javascript" src="../lib/scripts/msgpack.min.js"></script>
+    <script type="text/javascript" src="../lib/scripts/Chart.min.js"></script>
     <script src="../lib/scripts/jquery.treetable.js"></script>
     <script type="text/javascript" src="../sup/Hydra.js"></script>
     <script type="text/javascript" src="../sup/Util.js"></script>
@@ -37,7 +38,48 @@
     </tbody>
 </table>
 <div id="HipEntryNote">
-
+</div>
+<div id="FileViewer" style="position: relative; height:20vh; width:80vw">
+    <!--<canvas id="myChart"></canvas>-->
+    <!--<script>-->
+        <!--var ctx = document.getElementById("myChart").getContext('2d');-->
+        <!--var myChart = new Chart(ctx, {-->
+            <!--type: 'line',-->
+            <!--data: {-->
+                <!--labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],-->
+                <!--datasets: [{-->
+                    <!--label: '# of Votes',-->
+                    <!--data: [12, 19, 3, 5, 2, 3],-->
+                    <!--backgroundColor: [-->
+                        <!--'rgba(255, 99, 132, 0.2)',-->
+                        <!--'rgba(54, 162, 235, 0.2)',-->
+                        <!--'rgba(255, 206, 86, 0.2)',-->
+                        <!--'rgba(75, 192, 192, 0.2)',-->
+                        <!--'rgba(153, 102, 255, 0.2)',-->
+                        <!--'rgba(255, 159, 64, 0.2)'-->
+                    <!--],-->
+                    <!--borderColor: [-->
+                        <!--'rgba(255,99,132,1)',-->
+                        <!--'rgba(54, 162, 235, 1)',-->
+                        <!--'rgba(255, 206, 86, 1)',-->
+                        <!--'rgba(75, 192, 192, 1)',-->
+                        <!--'rgba(153, 102, 255, 1)',-->
+                        <!--'rgba(255, 159, 64, 1)'-->
+                    <!--],-->
+                    <!--borderWidth: 1-->
+                <!--}]-->
+            <!--},-->
+            <!--options: {-->
+                <!--scales: {-->
+                    <!--yAxes: [{-->
+                        <!--ticks: {-->
+                            <!--beginAtZero: true-->
+                        <!--}-->
+                    <!--}]-->
+                <!--}-->
+            <!--}-->
+        <!--});-->
+    <!--</script>-->
 </div>
 
 </body>
