Improve Chart view for Laser Stabilization Test

--- a/Sydra/Wydra/res/apps/dataviewer.html
+++ b/Sydra/Wydra/res/apps/dataviewer.html
@@ -6,6 +6,7 @@
     <script type="text/javascript" src="../lib/scripts/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="../lib/scripts/jquery.tablesorter.min.js"></script>
     <script type="text/javascript" src="../lib/scripts/msgpack.min.js"></script>
+    <script type="text/javascript" src="../lib/scripts/moment.min.js"></script>
     <script type="text/javascript" src="../lib/scripts/Chart.min.js"></script>
     <script src="../lib/scripts/jquery.treetable.js"></script>
     <script type="text/javascript" src="../sup/Hydra.js"></script>
