--- a/Sydra/Wydra/res/apps/dataviewer.html
+++ b/Sydra/Wydra/res/apps/dataviewer.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="../lib/scripts/jquery.tablesorter.min.js"></script>
     <script type="text/javascript" src="../lib/scripts/msgpack.min.js"></script>
     <script type="text/javascript" src="../lib/scripts/moment.min.js"></script>
+    <script type="text/javascript" src="../lib/scripts/context.js"></script>
     <script type="text/javascript" src="../lib/scripts/Chart.min.js"></script>
     <script src="../lib/scripts/jquery.treetable.js"></script>
     <script type="text/javascript" src="../sup/Hydra.js"></script>
@@ -17,6 +18,7 @@
     <link href="../lib/styles/treetable/jquery.treetable.css" rel="stylesheet" type="text/css"/>
     <link href="../lib/styles/treetable/jquery.treetable.theme.default.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="../lib/styles/tablesorter/blue/style.css" type="text/css"/>
+    <link rel="stylesheet" href="../lib/styles/context.standalone.css" type="text/css"/>
 </head>
 <body>
 <table id="file-table" border="1" class="treetable">
