--- a/Sydra/Wydra/res/apps/dataviewer.html
+++ b/Sydra/Wydra/res/apps/dataviewer.html
@@ -10,15 +10,16 @@
     <script type="text/javascript" src="../lib/scripts/context.js"></script>
     <script type="text/javascript" src="../lib/scripts/Chart.min.js"></script>
     <script src="../lib/scripts/jquery.treetable.js"></script>
-    <script type="text/javascript" src="../sup/Hydra.js"></script>
-    <script type="text/javascript" src="../sup/Util.js"></script>
+    <script type="text/javascript" src="../sup/Hydra.js?v=2018061901"></script>
+    <script type="text/javascript" src="../sup/Util.js?v=2018061901"></script>
     <script type="text/javascript" src="../sup/TreeTable.js"></script>
-    <script type="text/javascript" src="dataviewer.js"></script>
-    <link rel="stylesheet" href="dataviewer.css" type="text/css"/>
+    <script type="text/javascript" src="dataviewer.js?v=2018061901"></script>
+    <link rel="stylesheet" href="dataviewer.css?v=2018061901" type="text/css"/>
     <link href="../lib/styles/treetable/jquery.treetable.css" rel="stylesheet" type="text/css"/>
     <link href="../lib/styles/treetable/jquery.treetable.theme.default.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="../lib/styles/tablesorter/blue/style.css" type="text/css"/>
     <link rel="stylesheet" href="../lib/styles/context.standalone.css" type="text/css"/>
+    <link rel="icon" type="image/png" href="/favicon.png">
 </head>
 <body>
 <table id="file-table" border="1" class="treetable">
