--- a/Sydra/SydraJS/index.html
+++ b/Sydra/SydraJS/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <!-- Include Scala.js compiled code -->
-<!--<script type="text/javascript" src="http://cdn.jsdelivr.net/jquery/2.2.1/jquery.js"></script>-->
+<script type="text/javascript" src="http://cdn.jsdelivr.net/jquery/2.2.1/jquery.js"></script>
 <script type="text/javascript" src="./target/scala-2.12/sydra-js-fastopt.js"></script>
 <button id="click-me-button" type="button">
     Click me!
